--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -12,6 +12,8 @@
 <ion-content class="has-header">
  <div class="list"> 
      <a class="item item-avatar nav-clear menu-close" href="#/app/dados"> <img src="img/homem.jpg"><h2>Wanderson Scopel</h2><p>Editar Perfil</p></a> 
+  
+    <a class="item item-icon-left nav-clear menu-close" href="#/app/pertodemim"> <i class="icon ion-location"></i> Perto de Mim </a>
     <a class="item item-icon-left nav-clear menu-close" href="#/app/profissionais"> <i class="icon ion-heart"></i> Meus Profissionais </a>
     <a class="item item-icon-left nav-clear menu-close" href="#/app/orcamentos"> <i class="icon ion-pricetag"></i> Orçamentos <span class="badge badge-positive">0</span> </a> 
     <a class="item item-icon-left nav-clear menu-close" href="#/app/depoimentos"> <i class="icon ion-speakerphone"></i> Depoimentos <span class="badge badge-positive">0</span> </a> 
