--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -14,10 +14,11 @@
      <a class="item item-avatar nav-clear menu-close" href="#/app/dados"> <img src="img/homem.jpg"><h2>Wanderson Scopel</h2><p>Editar Perfil</p></a> 
   
     <a class="item item-icon-left nav-clear menu-close" href="#/app/pertodemim"> <i class="icon ion-location"></i> Perto de Mim </a>
-    <a class="item item-icon-left nav-clear menu-close" href="#/app/profissionais"> <i class="icon ion-heart"></i> Meus Profissionais </a>
+    <a class="item item-icon-left nav-clear menu-close" href="#/app/categorias"> <i class="icon ion-heart"></i> categorias </a>
+     <a class="item item-icon-left nav-clear menu-close" href="#/app/profissionais"> <i class="icon ion-heart"></i> Meus Profissionais </a>
     <a class="item item-icon-left nav-clear menu-close" href="#/app/orcamentos"> <i class="icon ion-pricetag"></i> Orçamentos <span class="badge badge-positive">0</span> </a> 
-    <a class="item item-icon-left nav-clear menu-close" href="#/app/depoimentos"> <i class="icon ion-speakerphone"></i> Depoimentos <span class="badge badge-positive">0</span> </a> 
-    <a class="item item-icon-left nav-clear menu-close" href="#/app/mensagens"> <i class="icon ion-chatboxes"></i> Mensagens <span class="badge badge-positive">0</span> </a> 
+    <a class="item item-icon-left nav-clear menu-close" href="#/app/depoimentos"> <i class="icon ion-speakerphone"></i> Depoimentos <span class="badge badge-energized">0</span> </a> 
+    <a class="item item-icon-left nav-clear menu-close" href="#/app/mensagens"> <i class="icon ion-chatboxes"></i> Mensagens <span class="badge badge-royal">0</span> </a> 
     <a class="item item-icon-left nav-clear menu-close"  ng-click="sair()"> <i class="icon ion-close"></i> Sair </a> 
 </div>
 </ion-content>  
