--- a/www/templates/pertodemim.html
+++ b/www/templates/pertodemim.html
@@ -9,7 +9,27 @@
  
  
   <ion-footer-bar class="bar-stable">
-      <a ng-click="centerOnMe()" class="button button-icon icon ion-navigate"></a>
+  
+  
+  <div class="tabs tabs-icon-top">
+   <a class="tab-item"  ng-click="centerOnMe()">
+    <i class="icon ion-home"></i>
+    Home
+  </a>
+  <a class="tab-item nav-clear menu-close" href="#/app/profissionais">
+    <i class="icon ion-star"></i>
+    Favorites
+  </a>
+  <a class="tab-item">
+    <i class="icon ion-gear-a"></i>
+    Settings
+  </a>
+</div>
+  
+  
+  
+  
+      
     </ion-footer-bar>
  
   
