--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,60 +1,28 @@
 <div ng-show="logado">
-  
-  <div class="bar bar-header bar-assertive">
-        
-      <button side="left" menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-   
-  <div class="h1 title">SELFBOSS</div> 
- 
-</div>
-  
-   
-<!--  <ion-view title="SELFBOSS">
-    <ion-nav-buttons side="left">
-      <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-    </ion-nav-buttons>
-    <ion-content class="has-header"> </ion-content>
-  </ion-view>-->
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-</div>
-
-
-
-
-
-<div ng-show="naologado">
-  <ion-content>
- <!--   <ion-slide-box>
-      <ion-slide>
-        <div class="box blue">
-          <button ng-click="nextSlide()">Next slide1!</button>
+      <div class="bar bar-header bar-assertive">
+        <button side="left" menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+        <div class="h1 title">SELFBOSS</div>
+      </div>
+      
+     
+      
+    </div>
+    
+    
+    
+    <div ng-show="naologado">
+    
+    <div class="geral">
+  <div class="conteudo"></div>
+  <div class="rodape">
+    
+    
+      <div class="row responsive-sm">
+        <div class="col">
+          <button class="button button-block button-calm" ng-click="cadastro()">Criar um conta</button>
+          <button class="button button-block button-positive" ng-click="login()">Já sou cadastrado</button>
         </div>
-      </ion-slide>
-      <ion-slide>
-        <div class="box blue1">
-          <button ng-click="nextSlide()">Next slide2!</button>
-        </div>
-      </ion-slide>
-      <ion-slide>
-        <div class="box blue2">
-          <button ng-click="previousSlide()">Next slide3!</button>
-        </div>
-      </ion-slide>
-    </ion-slide-box>-->
-    <div class="row responsive-sm">
-      <div class="col">
-        <button class="button button-block button-calm" ng-click="cadastro()">Criar um conta</button>
-        <button class="button button-block button-positive" ng-click="login()">Já sou cadastrado</button>
       </div>
     </div>
-  </ion-content>
+  </div>
 </div>
