--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,4 +1,4 @@
-<div class="modal">
+<div class="modal" style=" margin-top:5%;">
   <ion-header-bar>
     <h1 class="title">{{form_nome}}</h1>
     <div class="buttons">
