--- a/www/css/style.css
+++ b/www/css/style.css
@@ -10,3 +10,31 @@ map {
 .info {
 width: 100px;
 } 
+
+
+.rodape {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	/*background-color:#3C3;*/
+	/*background-image: url(img/480_r.png);
+	background-repeat: repeat;
+	background-position: top;*/
+}
+.conteudo {
+	overflow: hidden;
+}
+ 
+.geral {
+	min-height: 100%;
+	/*background-color:#F33;*/
+	/*position: relative;
+	background-image: url(img/480.jpg);
+	background-repeat: repeat;
+	background-position: top;*/
+}
+ 
+ 
+ html, body {
+	height: 100%;
+}
