--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -15,9 +15,13 @@
           <label class="item item-input"> <span class="input-label">Senha</span>
             <input type="password" ng-model="loginData.password">
           </label>
-          <label>
-            <button class="button button-block button-positive" type="submit">Entrar</button>
-          </label>
+       
+       
+       <div class="padding">
+        <button class="button button-block button-positive">Entrar</button>
+      </div>
+       
+       
         </div>
       </form>
     
@@ -34,9 +38,12 @@
           <label class="item item-input"> <span class="input-label">usuário</span>
             <input type="text" ng-model="loginData.username">
           </label>
-          <label>
-            <button class="button button-block button-positive" type="submit">solicitar nova senha</button>
-          </label>
+          
+            <div class="padding">
+        <button class="button button-block button-positive">Entrar</button>
+      </div>
+          
+          
         </div>
       </form>
      
