--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -74,7 +74,7 @@
           </label>
           
        
-          
+           
           
           
           <li class="item item-checkbox"> 
@@ -88,10 +88,9 @@
          
           
           
-          
-          <label>
-            <button class="button button-block button-positive" type="submit">Cadastrar</button>
-          </label>
+         <div class="padding">
+        <button class="button button-block button-positive">Cadastrar</button>
+      </div>
           
         </div>
       </form>
