--- a/www/templates/buscar.html
+++ b/www/templates/buscar.html
@@ -1,13 +1,13 @@
 <header class="bar bar-header bar-assertive">
   <button side="left" menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-  <div class="h1 title">Depoimentos</div>
+  <div class="h1 title">Buscar</div>
 </header>
 <ion-content class="has-header">
-  
-</ion-content>
-
-
-
+   
+</ion-content> 
+ 
+ 
+ 
    <ion-footer-bar class="bar-stable">
         <div class="tabs tabs-icon-top"> <a class="tab-item nav-clear menu-close has-badge" href="#/app/home"> <i class="icon ion-ios7-home-outline"></i> Home </a> <a class="tab-item nav-clear menu-close has-badge" href="#/app/buscar"> <i class="icon ion-ios7-search"></i> Buscar <span class="badge badge-assertive">0</span> </a> <a class="tab-item nav-clear menu-close has-badge"  href="#/app/pertodemim"> <i class="icon ion-location"></i> Perto de Mim <span class="badge badge-assertive">0</span> </a> <a class="tab-item nav-clear menu-close has-badge" href="#/app/servicos"> <i class="icon ion-ios7-people-outline"></i> por serviços <span class="badge badge-assertive">0</span> </a> </div>
       </ion-footer-bar>
