--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,22 +1,23 @@
 <div ng-show="logado">
-      <div class="bar bar-header bar-assertive">
-        <button side="left" menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-        <div class="h1 title">SELFBOSS</div>
-      </div>
+  <div class="bar bar-header bar-assertive">
+    <button side="left" menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+    <div class="h1 title">SELFBOSS</div>
+  </div>
+  <div class="geral">
+    <div class="conteudo"></div>
+    <div class="rodape">
       
-     
-      
+   <ion-footer-bar class="bar-stable">
+        <div class="tabs tabs-icon-top"> <a class="tab-item nav-clear menu-close has-badge" href="#/app/home"> <i class="icon ion-ios7-home-outline"></i> Home </a> <a class="tab-item nav-clear menu-close has-badge" href="#/app/buscar"> <i class="icon ion-ios7-search"></i> Buscar <span class="badge badge-assertive">0</span> </a> <a class="tab-item nav-clear menu-close has-badge"  href="#/app/pertodemim"> <i class="icon ion-location"></i> Perto de Mim <span class="badge badge-assertive">0</span> </a> <a class="tab-item nav-clear menu-close has-badge" href="#/app/servicos"> <i class="icon ion-ios7-people-outline"></i> por serviços <span class="badge badge-assertive">0</span> </a> </div>
+      </ion-footer-bar>
+  
     </div>
-    
-    
-    
-    <div ng-show="naologado">
-    
-    <div class="geral">
-  <div class="conteudo"></div>
-  <div class="rodape">
-    
-    
+  </div>
+</div>
+<div ng-show="naologado">
+  <div class="geral">
+    <div class="conteudo"></div>
+    <div class="rodape">
       <div class="row responsive-sm">
         <div class="col">
           <button class="button button-block button-calm" ng-click="cadastro()">Criar um conta</button>
