--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -10,17 +10,19 @@
 <h1 class="title">SELFBOSS</h1>
 </header>
 <ion-content class="has-header">
- <div class="list"> 
-     <a class="item item-avatar nav-clear menu-close" href="#/app/dados"> <img src="img/homem.jpg"><h2>Wanderson Scopel</h2><p>Editar Perfil</p></a> 
-  
-    <a class="item item-icon-left nav-clear menu-close" href="#/app/pertodemim"> <i class="icon ion-location"></i> Perto de Mim </a>
-    <a class="item item-icon-left nav-clear menu-close" href="#/app/categorias"> <i class="icon ion-heart"></i> categorias </a>
-     <a class="item item-icon-left nav-clear menu-close" href="#/app/profissionais"> <i class="icon ion-heart"></i> Meus Profissionais </a>
-    <a class="item item-icon-left nav-clear menu-close" href="#/app/orcamentos"> <i class="icon ion-pricetag"></i> Orçamentos <span class="badge badge-positive">0</span> </a> 
-    <a class="item item-icon-left nav-clear menu-close" href="#/app/depoimentos"> <i class="icon ion-speakerphone"></i> Depoimentos <span class="badge badge-energized">0</span> </a> 
-    <a class="item item-icon-left nav-clear menu-close" href="#/app/mensagens"> <i class="icon ion-chatboxes"></i> Mensagens <span class="badge badge-royal">0</span> </a> 
-    <a class="item item-icon-left nav-clear menu-close"  ng-click="sair()"> <i class="icon ion-close"></i> Sair </a> 
-</div>
+    <div class="list"> 
+        <a class="item item-avatar nav-clear menu-close" href="#/app/dados"> <img src="img/homem.jpg"><h2>Wanderson Scopel</h2><p>Editar Perfil</p></a> 
+    </div>
+    
+    <div class="list" style="padding-top:15px;">  
+        <a class="item item-icon-left nav-clear menu-close" href="#/app/profissionais"> <i class="icon ion-ios7-people-outline"></i> Meus Profissionais </a>
+        <a class="item item-icon-left nav-clear menu-close" href="#/app/orcamentos"> <i class="icon ion-ios7-pricetag-outline"></i> Orçamentos <span class="badge badge-positive">0</span> </a> 
+        <a class="item item-icon-left nav-clear menu-close" href="#/app/depoimentos"> <i class="icon ion-ios7-star-outline"></i> Depoimentos <span class="badge badge-energized">0</span> </a> 
+        <a class="item item-icon-left nav-clear menu-close" href="#/app/mensagens"> <i class="icon ion-ios7-chatbubble-outline"></i> Mensagens <span class="badge badge-royal">0</span> </a> 
+        <a class="item item-icon-left nav-clear menu-close" href="#/app/suporte"> <i class="icon ion-ios7-lightbulb-outline"></i> Suporte <span class="badge badge-royal">0</span> </a> 
+        <a class="item item-icon-left nav-clear menu-close" ng-click="sair()"> <i class="icon ion-ios7-undo-outline"></i> Sair </a> 
+  </div>
+
 </ion-content>  
 </ion-side-menu>
 </ion-side-menus>
