--- a/www/templates/pertodemim.html
+++ b/www/templates/pertodemim.html
@@ -7,29 +7,7 @@
 </ion-content> 
  
  
- 
-  <ion-footer-bar class="bar-stable">
-  
-  
-  <div class="tabs tabs-icon-top">
-   <a class="tab-item"  ng-click="centerOnMe()">
-    <i class="icon ion-home"></i>
-    Home
-  </a>
-  <a class="tab-item nav-clear menu-close" href="#/app/profissionais">
-    <i class="icon ion-star"></i>
-    Favorites
-  </a>
-  <a class="tab-item">
-    <i class="icon ion-gear-a"></i>
-    Settings
-  </a>
-</div>
-  
-  
-  
-  
-      
-    </ion-footer-bar>
- 
+   <ion-footer-bar class="bar-stable">
+        <div class="tabs tabs-icon-top"> <a class="tab-item nav-clear menu-close has-badge" href="#/app/home"> <i class="icon ion-ios7-home-outline"></i> Home </a> <a class="tab-item nav-clear menu-close has-badge" href="#/app/buscar"> <i class="icon ion-ios7-search"></i> Buscar <span class="badge badge-assertive">0</span> </a> <a class="tab-item nav-clear menu-close has-badge"  href="#/app/pertodemim"> <i class="icon ion-location"></i> Perto de Mim <span class="badge badge-assertive">0</span> </a> <a class="tab-item nav-clear menu-close has-badge" href="#/app/servicos"> <i class="icon ion-ios7-people-outline"></i> por serviços <span class="badge badge-assertive">0</span> </a> </div>
+      </ion-footer-bar>
   
