--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -5,7 +5,7 @@
 </ion-nav-bar>
 <ion-nav-view name="menuContent" animation="slide-left-right"></ion-nav-view>
 </ion-pane>
-<ion-side-menu side="left">
+<ion-side-menu side="right">
 <header class="bar bar-header bar-assertive">
 <h1 class="title">SELFBOSS</h1>
 </header>
