--- a/www/css/style.css
+++ b/www/css/style.css
@@ -37,4 +37,13 @@ width: 100px;
  
  html, body {
 	height: 100%;
+	background-color:#d9edee;
 }
+
+@font-face {
+	font-family: "Hero";
+	src: url("Hero.eot?") format("eot"), url("Hero.woff") format("woff"), url("Hero.ttf") format("truetype"), url("Hero.svg#Hero") format("svg");
+	font-weight: normal;
+	font-style: normal;
+}
+
