--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -17,12 +17,31 @@
           </div>
        
   
-    </div>
+    </div>  
   </div>
 </div>
 <div ng-show="naologado">
+<div style="z-index:99999; position: absolute; margin-left:5px; margin-top:5px;">
+    <img src="img/logo.png" width="65" height="99" /></div>
+<div class="bar bar-header  bar-stable">
+   
+    <div class="h1 title">
+     
+    
+    </div>
+   <button side="left" menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+  </div>
+
   <div class="geral">
-    <div class="conteudo"></div>
+    <div class="conteudo">
+    <div style="text-align:center; margin-top:70px; margin-bottom:5px;"><img src="img/nuvens.png" width="254" height="71" /></div>
+<div style="font-family:'Hero'; text-align:center; font-size:28px; color:#235559; width:95%; margin:0 auto; line-height:25px; ">O que você faz<br />
+ quando precisa de <br />
+um profissional <br />
+com urgência?</div>
+          <div style="font-family:'Hero'; text-align:center; font-size:16px; color:#235559; width:95%; margin:0 auto; line-height:18px; margin-top:25px; ">Se não conseguiu responder, <br />
+você vai se surpreender!</div>
+    </div>
     <div class="rodape">
       <div class="row responsive-sm">
         <div class="col">
