--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -29,7 +29,7 @@
      
     
     </div>
-   <button side="left" menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+   <button side="right" menu-toggle="right" class="button button-icon icon ion-navicon"></button>
   </div>
 
   <div class="geral">
