--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -9,10 +9,38 @@
     <div style="text-align:center; margin-top:60px; margin-bottom:5px;"><img src="img/nuvens.png" width="254" height="71" /></div>
     <div style="font-family:'Hero'; text-align:center; font-size:22px; color:#235559; width:95%; margin:0 auto; line-height:22px; ">Uma nova forma de 
     <br /> encontrar o profissional <br />
-que você precisa!</div>
-     
+que você precisa!
+<div style="clear:both"></div>
+<div style="float:right; padding-top:20px; background-image:url(img/busca.png); background-position:top; background-repeat:no-repeat; height:240px; width:100%;"> </div>
+     </div> 
   </div>
-  <div class="rodape">    
+    
+     <div class="tabs tabs-icon-top">
      
+     
+     
+<a class="tab-item nav-clear menu-close has-badge" href="#/app/home" style="font-size:11px"> <i class="icon ion-ios7-home-outline"></i> Home </a>
+
+<a class="tab-item nav-clear menu-close has-badge"  href="#/app/pertodemim" style="font-size:11px"><i class="icon ion-location"></i> Próximo <span class="badge badge-assertive" style="font-size:9px">0</span> </a> 
+
+<a class="tab-item nav-clear menu-close has-badge" href="#/app/buscar" style="font-size:11px"> <i class="icon ion-ios7-search"></i> Pesquisar <span class="badge badge-assertive" style="font-size:9px">0</span> </a> 
+
+
+
+ 
+
+
+
+
+
+<a class="tab-item nav-clear menu-close has-badge" href="#/app/servicos" style="font-size:11px"> <i class="icon ion-ios7-copy-outline"></i> Orçamento <span class="badge badge-assertive" style="font-size:9px">0</span> </a>
+  
+  
+ 
   </div>
 </div>
+
+
+ 
+
+ 
